--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Sun Sep  5 16:39:41 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstsnetrouter.c: comment updates.
+
+	* beast-gtk/icons/ladspa.xcf: new icon submitted by
+	Artem Popov <tfwo@mail.ru>.
+
+	* beast-gtk/icons/ladspa.png: updated from new ladspa.xcf.
+
 Sat Sep  4 04:56:07 2004  Tim Janik  <timj@gtk.org>
 
 	* docs/plugin-devel.texi: wording fixes. started section on input and
